--- a/FitlyApp/base.css
+++ b/FitlyApp/base.css
@@ -102,33 +102,36 @@ header nav ul li a:hover {
 footer
 ************************************************/
 footer {
+  padding:1vw 3vw 0 3vw ;
   background-color: rgba(255, 255, 255, 0.8);
 }
 footer div {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1vw 3vw 0 3vw;
+  padding: 0 2vw;
+}
+
+footer div a img {
+  width: 8vw;
 }
 footer div div {
   display: block;
 }
-
+footer div div.logo, div.contact, div.mapSite {
+  min-height: 16vw;
+  /*Alinha todas as Divs, e por consequências, os títulos*/
+}
 footer div div h2 {
-  font-size: 1.5vw;
+  font-size: 1.5rem;
 }
 footer div div ul li a {
-  font-size: 1vw;
+  font-size: 0.8rem;
 }
 footer div div p {
-  font-size: 1vw;
-}
-footer div a {
-  display: flex;
-  align-items: center;
-}
-footer div a img {
-  width: 8vw;
+  font-size: 0.8rem;
+  color: black;
+  margin: 30px 0;
 }
 footer div div.logo img {
   width: 5vw;
@@ -138,16 +141,17 @@ footer div div p {
 }
 footer div div.logo ul {
   display: flex;
-  gap: 0.5rem;
+  align-items: center;
+}
+footer div div.logo ul li {
+  display: flex;
+  align-items: center;
 }
 
-footer div div.logo ul span {
-  font-size: 1.1rem;
-}
 footer div div > h2 {
   color: #009dff;
 }
-footer div div ul li {
+footer div div ul li > a {
   margin: 10px 0;
 }
 footer div div ul li a:hover {
@@ -159,14 +163,8 @@ footer div div p.email {
 footer div.direitos {
   display: flex;
   justify-content: center;
-  margin: 10px 0 15px 0;
 }
 footer div.direitos p {
   color: gray;
   font-size: 0.8rem;
-}
-
-footer a {
-  text-decoration: none;
-  color: black;
 }
