--- a/FitlyApp/base.css
+++ b/FitlyApp/base.css
@@ -111,7 +111,10 @@ footer div {
   align-items: center;
   padding: 0 2vw;
 }
-
+footer div a {
+    display: flex;
+    align-items: center;
+}
 footer div a img {
   width: 8vw;
 }
@@ -141,7 +144,11 @@ footer div div p {
 }
 footer div div.logo ul {
   display: flex;
+  gap: 0.5rem;
   align-items: center;
+}
+footer div div.logo ul li span {
+  font-size: 1.2rem;
 }
 footer div div.logo ul li {
   display: flex;
