--- a/FitlyApp/Artigos/CSS/artigoPrincipal.css
+++ b/FitlyApp/Artigos/CSS/artigoPrincipal.css
@@ -46,17 +46,22 @@ Reset
 HTML
 ************************************************/
 
+:root{
+  --color-background:  #f7f7f7;
+  --color-text:#0a0908;
+}
+
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: #f7f7f7;
+  background-color: var(--color-background);
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: var(--color-text);
 }
 
 ul li {
@@ -67,15 +72,40 @@ ul li {
 header
 ************************************************/
 
+header nav {
+  display: flex;
+}
+header nav button {
+  font-size: 1.5rem;
+  align-items: center;
+  background-color: transparent;
+  border: 0;
+  margin: 0 1.5rem;
+}
+header nav button:hover {
+  color:#009dff;
+  transition: all 0.3s ease;
+  border-radius: 5px;
+}
+header nav button span#lua {
+  display: block;
+}
+header nav button span#sol {
+  display: none;
+}
+header nav ul li {
+  margin: 10px;
+  display: inline;
+}
+
 /************************************************
 geral
 ************************************************/
 section {
   text-align: center;
-  padding: 0 20vw 0 20vw;
+  padding: 0 20vw 5vw 20vw;
 }
 section h1 {
-  color: #0d1b2a;
   font-size: 2rem;
   font-weight: bold;
   margin: 2rem 2rem 0 2rem;
@@ -88,7 +118,6 @@ section h2 {
   margin: 1.2vw 0 0 0;
 }
 section ul li h2 {
-  color: #000000;
   font-weight: bold;
   padding: 2rem;
 }
@@ -100,7 +129,11 @@ section div.tudo {
   border-radius: 1vw;
   background-color: white;
 }
+/*
 
+Esse item terá seu plano de fundo diretamente alterado, podendo haver alteração de cor através do script
+
+*/
 section div.tudo > a {
     flex-basis: 40%;
     flex-shrink: 0;
@@ -118,13 +151,15 @@ section div.texto {
   flex-basis: 60%;
   padding: 0 0 0 2rem;
   text-align: left;
-  color: #000000;
+}
+section div.texto p {
+  color:var(--color-text);
 }
 
 section div.texto p.button {
-  background-color: white;
+  background-color: var(--color-background);
   text-align: center;
-  color: #000000;
+  color: var(--color-text);
   border-radius: 2vw;
   margin: 2vw 0 0 0;
   border: 2px solid #009dff;
@@ -132,9 +167,7 @@ section div.texto p.button {
 section ul li div.texto p {
   font-size: 1vw;
 }
-section ul li {
-  color: white;
-}
+
 /************************************************
 footer
 ************************************************/
