--- a/footer.css
+++ b/footer.css
@@ -1,8 +1,3 @@
-/************************************************
-Poppins Font
-************************************************/
-
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 a {
@@ -10,19 +5,11 @@ a {
   text-decoration: none;
 }
 
-/************************************************
-Reset
-************************************************/
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-/************************************************
-HTML
-************************************************/
 
 :root {
   --step-2: clamp(0.7813rem, 0.7736rem + 0.0341vw, 0.8rem);
@@ -39,10 +26,6 @@ html {
   font-family: "Poppins";
   scroll-behavior: smooth;
   background-color: #ffffff;
-}
-
-/* USO DIRETO */
-html {
   font-size: clamp(1rem, calc(0.5rem + 2vw), 1.625rem);
 }
 
@@ -50,47 +33,27 @@ ul li {
   list-style-type: none;
 }
 
-/************************************************
-footer
-************************************************/
-
-footer {
-  padding: 2rem 0;
-  border-top: 1px solid #eee;
-}
-
-footer > div:first-child {
+footer div {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  gap: 2rem;
-  margin: 0 auto;
-  padding: 0 3rem;
-  max-width: 1200px;
+  align-items: center;
+  margin: 1vw 3vw 0 3vw;
 }
 
 footer div div {
   display: block;
-  flex: 1;
-}
-
-footer div div.logo {
-  flex-basis: 40%;
 }
 
 footer div div h2 {
-  font-size: var(--step-0);
-  font-weight: 600;
-  margin-bottom: 1rem;
+  font-size: 1.5vw;
 }
 
 footer div div ul li a {
-  font-size: var(--step--1);
+  font-size: 1vw;
 }
 
 footer div div p {
-  font-size: var(--step--1);
-  line-height: 1.6;
+  font-size: 1vw;
 }
 
 footer div a {
@@ -99,13 +62,11 @@ footer div a {
 }
 
 footer div a img {
-  width: auto;
-  height: 2.5rem;
+  width: 8vw;
 }
 
 footer div div.logo img {
-  width: auto;
-  height: 2.5rem;
+  width: 5vw;
 }
 
 footer div div p {
@@ -114,17 +75,11 @@ footer div div p {
 
 footer div div.logo ul {
   display: flex;
-  gap: 1rem;
-  padding-left: 0;
+  gap: 0.5rem;
 }
 
 footer div div.logo ul span {
-  font-size: 1.5rem;
-  transition: color 0.3s ease;
-}
-
-footer div div.logo ul a:hover span {
-  color: #009dff;
+  font-size: 1.1rem;
 }
 
 footer div div > h2 {
@@ -132,24 +87,21 @@ footer div div > h2 {
 }
 
 footer div div ul li {
-  margin: 0.5rem 0;
+  margin: 10px 0;
 }
 
 footer div div ul li a:hover {
-  text-decoration: underline #009dff 2px;
+  text-decoration: underline #009dff 0.1vw;
 }
 
 footer div div p.email {
   color: #009dff;
-  font-weight: 500;
 }
 
 footer div.direitos {
   display: flex;
   justify-content: center;
-  margin: 2rem 3rem 0 3rem;
-  padding-top: 1rem;
-  border-top: 1px solid #eee;
+  margin: 10px 0 15px 0;
 }
 
 footer div.direitos p {
@@ -162,44 +114,74 @@ footer a {
   color: black;
 }
 
-@media screen and (max-width: 600px) {
-  footer > div:first-child {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 0 1.5rem;
-    gap: 2.5rem;
-    margin: 0;
-  }
+/* RESPONSIVE */
 
-  footer div div.logo {
-    flex-basis: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 1024px) {
+  footer div {
+    margin: 3vw;
   }
-
-  footer div div.logo ul {
-    justify-content: center;
-  }
-
   footer div div h2 {
-    font-size: 1.25rem;
+    font-size: 2.5vw;
   }
-
+  footer div div p,
   footer div div ul li a {
-    font-size: 1rem;
+    font-size: 2vw;
   }
-
-  footer div div p {
-    font-size: 1rem;
+  footer div div.logo img {
+    width: 10vw;
   }
+}
 
-  footer div.direitos {
-    margin: 2rem 1.5rem 0 1.5rem;
+@media (max-width: 768px) {
+  footer div {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    margin: 5vw;
   }
+  footer div a img {
+    width: 20vw;
+  }
+  footer div div.logo img {
+    width: 15vw;
+  }
+  footer div div h2 {
+    font-size: 4.5vw;
+  }
+  footer div div p,
+  footer div div ul li a {
+    font-size: 3.5vw;
+  }
+  footer div div.logo ul span {
+    font-size: 1.5rem;
+  }
+  footer div div.mapSite ul li {
+    margin: 5px 0;
+  }
+}
 
+@media (max-width: 480px) {
+  footer div {
+    margin: 6vw;
+    gap: 1.5rem;
+  }
+  footer div div h2 {
+    font-size: 5vw;
+  }
+  footer div div p,
+  footer div div ul li a {
+    font-size: 4vw;
+  }
+  footer div div.logo img {
+    width: 20vw;
+  }
+  footer div a img {
+    width: 25vw;
+  }
+  footer div div.logo ul span {
+    font-size: 1.8rem;
+  }
   footer div.direitos p {
-    text-align: center;
+    font-size: 3vw;
   }
 }
