--- a/FitlyApp/Artigos/CSS/style-beneficios.css
+++ b/FitlyApp/Artigos/CSS/style-beneficios.css
@@ -147,12 +147,12 @@ section p.meio {
     text-align: center;
     font-size: 20px;
     margin: 0vw 20rem 2rem 20rem;
+    text-align: justify;
 }
 
 section ul {
     display: flex;
     text-align: center;
-    padding: 0 2rem 0 2rem;
     justify-content: center;
 }
 section p {
@@ -162,7 +162,7 @@ section p {
 }
 
 section ul li h2 {
-    font-size: 1.4vw;
+    font-size: 1.4rem;
     font-weight: bold;
     text-align: left; 
 }
@@ -219,7 +219,7 @@ footer div div {
 }
 
 footer div div h2 {
-    font-size: 1.5vw;
+    font-size: 1.5rem;
 }
 footer div div ul li a {
     font-size: 1vw;
@@ -278,3 +278,33 @@ footer a {
 /************************************************
 celular
 ************************************************/
+@media (max-width: 600px) {
+section p.meio {
+    font-size: 20px;
+    margin: 0vw 0rem 2rem 0rem;
+}
+section ul {
+    display: inline-block;
+    text-align: center;
+    padding: 0 2rem 0 2rem;
+    justify-content: center;
+}
+
+section ul li {
+    flex-direction: column;  
+    width: 100%;
+    margin: 0 0 0 0;
+    padding: 0 2rem;
+}
+section p.meio {
+    font-size: 1rem;
+    margin: 0vw 2rem 2rem 2rem;
+}
+section ul li img {
+    width: 15rem;
+    height: 10rem;
+}
+section ul li p {
+    text-align: center;
+}
+}
