--- a/FitlyApp/base.css
+++ b/FitlyApp/base.css
@@ -185,13 +185,13 @@ footer div div p {
 footer div a {
   display: flex;
   align-items: center;
-}
+}   
 
 footer div a img {
   width: 8vw;
 }
 
-footer div h1.logo img {
+footer div div.logo img {
   width: 5vw;
 }
 
@@ -199,12 +199,12 @@ footer div div p {
   margin: 10px 0;
 }
 
-footer div h1.logo ul {
+footer div div.logo ul {
   display: flex;
   gap: 0.5rem;
 }
 
-footer div h1.logo ul span {
+footer div div.logo ul span {
   font-size: 1.1rem;
 }
 
@@ -253,7 +253,7 @@ footer a {
   footer div div ul li a {
     font-size: 2vw;
   }
-  footer div h1.logo img {
+  footer div div.logo img {
     width: 10vw;
   }
 }
@@ -268,7 +268,7 @@ footer a {
   footer div a img {
     width: 20vw;
   }
-  footer div h1.logo img {
+  footer div div.logo img {
     width: 15vw;
   }
   footer div div h2 {
@@ -278,7 +278,7 @@ footer a {
   footer div div ul li a {
     font-size: 3.5vw;
   }
-  footer div h1.logo ul span {
+  footer div div.logo ul span {
     font-size: 1.5rem;
   }
   footer div div.mapSite ul li {
@@ -298,18 +298,16 @@ footer a {
   footer div div ul li a {
     font-size: 4vw;
   }
-  footer div h1.logo img {
+  footer div div.logo img {
     width: 20vw;
   }
   footer div a img {
     width: 25vw;
   }
-  footer div h1.logo ul span {
+  footer div div.logo ul span {
     font-size: 1.8rem;
   }
   footer div.direitos p {
     font-size: 3vw;
-    margin: 0 auto;
   }
-
 }
