--- a/FitlyApp/Sobre-o-projeto/css/sobreProjeto.css
+++ b/FitlyApp/Sobre-o-projeto/css/sobreProjeto.css
@@ -7,29 +7,28 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format("woff2");
   unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
     U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
+
 /* latin-ext */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format("woff2");
   unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
     U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
     U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -45,6 +44,9 @@
   box-sizing: border-box;
 }
 
+main, footer{
+  background-color: #f9f9f9;
+}
 /************************************************
   HTML
   ************************************************/
@@ -58,6 +60,7 @@ html {
 html {
   font-size: calc(15px + 0.390625vw);
 }
+
 ul li {
   list-style-type: none;
 }
@@ -138,7 +141,8 @@ Banner
   object-fit: cover;
   display: block;
   width: 100%;
-  height: 1010px;
+  height: 100vh;
+  max-height: 1010px;
   opacity: 0.3;
   background-color: #000000;
 }
@@ -161,7 +165,10 @@ Banner
   color: #ffffff;
   font-size: 2.5rem;
   font-weight: bold;
-}
+  display: inline-block;
+  border-bottom: 0.4vw solid #009DFF;
+  border-radius: 0.4vw;
+} 
 
 .banner p {
   color: #ffffff;
@@ -189,135 +196,76 @@ Banner
 }
 
 /************************************************
-Main
-************************************************/
-
-a {
-  text-decoration: none;
-  color: black;
-}
-strong {
-  text-decoration: none;
-}
-
-p {
-  margin: 30px;
-}
-
-main {
-  text-align: center;
-}
-
-main .all-sec nav ul li .part , main .all-sec ul li .ações{
-  color: #009DFF ;
-}
-
-.all-sec nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0 auto;
-  width: 90%;
-}
-
-
-.all-sec nav ul .esquerda,
-.all-sec nav ul .direita {
-  background-color: #f7f7f7;  
-  width: 50rem;
-  height: fit-content;
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  margin: 1rem 0;
-  text-align: left;
-}
-
-
-
-main .colaboradores h2, 
-main .all-sec h2 {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.8rem;
-  color: #0d1b2a;
-  margin: 3vw 10vw;
-  margin-top: 3vw;
-  display: inline-block;
-  border-bottom: 3px solid #009dff;
-  padding-bottom: 5px;
-}
-
-main h2 {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.5rem;
-  color: #0d1b2a;
-  margin: 3vw 10vw;
-  margin-top: 4vw;
-  display: inline-block;
-  border-bottom: 3px solid #009dff;
-  padding-bottom: 5px;
-}
-
-main .all-sec ul li i{
-  color: #009DFF;
-}
-
-main .all-sec ul li div li.p{
-  margin: 0;
-  line-height: 1.5;
-  list-style-type: disc;
-}
-
-/************************************************
   Colaboradores
 ************************************************/
 
 .colaboradores {
-  margin: 5vw auto 0 auto ;
+  margin: 5vw auto 0 auto;
   width: 80%;
   max-width: 1200px;
+  padding: 4vw 3vw;
+  background-color: #f9f9f9;
+  border-radius: 1rem;
 }
 
-.colaboradores > ul > li{
-    background-color: white;
-    border-radius: 0.7rem;
-    border: 1px solid white;
-    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.267);
-    padding: 1vw 0.6vw;
+.colaboradores h2{
+  text-align: center;
+  display: inline-block;
+  border-bottom: 5px solid #009DFF;
+  border-radius: 0.3vw;
 }
 
-.colaboradores .unico{
-  padding: 0 1vw;
-  max-width: 570px;
+.colaboradores > ul > li {
+  background-color: #fff;
+  border-radius: 1.4vw;
+  border: 1px solid #fff;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
+  padding: 1.4vw 2vw;
+}
+
+.colaboradores .unico {
+  padding: 2rem 10vw;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2rem auto;
+  margin: 3rem auto;
+  width: 100%;
 }
 
-.colaboradores .unico .unit img{
-  width: 20rem;
+.colaboradores .unico .unit img {
+  width: 100%;
   height: 20rem;
   object-fit: cover;
-  border-radius: 0.6rem;
-  padding: 0.2px;
-  margin: 0 auto 0.5rem;
+  border-radius: 0.8rem;
+  padding: 8px;
+  margin: 0 auto 1rem;
+  margin: 1vw 0;
 }
 
-section.colaboradores div.colab ul.dupla li {
-  padding: 0 3rem 2rem 3rem;      
+.colaboradores .colab {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 3rem;
+  margin: 4vw auto 0 auto;
+  padding: 2rem;
 }
 
-.colaboradores .colab{
+.colaboradores .colab li {
+  background-color: #fff;
+  border-radius: 0.8rem;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
+  padding: 2rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.colaboradores .colab {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
   margin: 3vw auto 0 auto;
-} 
+}
 
-.colaboradores .colab .dupla div li p:first-child {
+.colaboradores .colab .dupla li p:first-child {
   margin: 2rem 1rem;
 }
 
@@ -326,7 +274,7 @@ section.colaboradores div.colab ul.dupla li {
 }
 
 .colaboradores .colab li p img {
-  width: 20rem;
+  width: 100%;
   height: 20rem;
   object-fit: cover;
   border-radius: 0.6rem;
@@ -344,101 +292,158 @@ section.colaboradores div.colab ul.dupla li {
 /************************************************
   footer
   ************************************************/
-footer div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 1vw 3vw 0 3vw;
+footer div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1vw 3vw 0 3vw;
 }
+
 footer div div {
-    display: block;
+  display: block;
 }
 
 footer div div h2 {
-    font-size: 1.5vw;
+  font-size: 1.5vw;
 }
+
 footer div div ul li a {
-    font-size: 1vw;
+  font-size: 1vw;
 }
+
 footer div div p {
-    font-size: 1vw;
+  font-size: 1vw;
 }
+
 footer div a {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
 footer div a img {
-    width: 8vw;
+  width: 8vw;
 }
+
 footer div div.logo img {
-   width: 5vw;
+  width: 5vw;
 }
+
 footer div div p {
-    margin: 10px 0;
+  margin: 10px 0;
 }
+
 footer div div.logo ul {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 footer div div.logo ul span {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 }
-footer div div > h2 {
-    color: #009DFF;
+
+footer div div>h2 {
+  color: #009DFF;
 }
+
 footer div div ul li {
-    margin: 10px 0;
+  margin: 10px 0;
 }
+
 footer div div ul li a:hover {
-    text-decoration: underline #009DFF 0.1vw;
+  text-decoration: underline #009DFF 0.1vw;
 }
+
 footer div div p.email {
-    color: #009DFF;
+  color: #009DFF;
 }
-footer div.direitos  {
-    display: flex;
-    justify-content: center;
-    margin: 10px 0 15px 0;
+
+footer div.direitos {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 15px 0;
 }
+
 footer div.direitos p {
-    color: gray;
-    font-size: 0.8rem;
+  color: gray;
+  font-size: 0.8rem;
 }
 
 footer a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
+/* === RESPONSIVIDADE === */
 
+@media screen and (max-width: 768px) {
 
-@media (max-width: 768px) {
-  section{
+  .colaboradores .unico {
+    padding: 2rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem auto;
+    width: 100%;
+  }
+  .IMG img{
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 70vh;
+    max-height: 768px;
+    opacity: 0.3;
+    background-color: #000000;
+  }
+
+  .banner h1 {
+    margin: 30px 0px 30px 0px;
+    color: #ffffff;
+    font-size: 2.5rem;
+    font-weight: bold;
+    display: inline-block;
+    border-bottom: 0.8vw solid #009DFF;
+    border-radius: 0.4vw;
+  } 
+
+  .colaboradores .unico li p, .colab li p{
+    margin: 0 0 3vw 0 ;
+  }
+
+  .colaboradores .unico, .cloab li p strong{
+    font-size: 1.8rem;
+  }
+  section {
     flex-direction: column;
   }
 
-  section div.tudo a img {
-    width: 15rem;
-    height: 10rem;
-    
+  section.colaboradores .colab {
+    display: block;
+    padding: 0;
   }
 
-  section div.texto {
-    padding: 1vw 0 0 0;
+  section.colaboradores .colab li {
+    margin: 3vw 5vw;
+    padding: 2vw 4vw;
+  }
+
+
+  footer div {
+    flex-direction: column;
     text-align: center;
+    align-items: center;
   }
-  section ul li div.texto p {
-  font-size: 4vw;
+
+  footer div a img,
+  footer div div.logo img {
+    width: 20vw;
   }
-  section div.tudo {
-    padding: 3vw;
+
+  footer div div h2 {
+    font-size: 1rem;
   }
-  section {
-  text-align: center;
-  padding: 0 10vw 0 10vw;
-}
-section div.tudo {
-  padding: 8vw;
-}
+
+  footer div div p,
+  footer div div ul li a {
+    font-size: 0.85rem;
+  }
 }
