--- a/FitlyApp/Artigos/CSS/organização_alimentar.css
+++ b/FitlyApp/Artigos/CSS/organização_alimentar.css
@@ -82,16 +82,16 @@ p {
 }
 
 :root {
+  --color-background: #ffffff;
+  --color-text: #333333;
+}
 
-  li {
-    color: var(--color-background);
+li {
+  color: var(--color-background);
+}
 
-  }
-
-  body {
-    background-color: var(--color-background);
-  }
-
+body {
+  background-color: var(--color-background);
 }
 
 p,
