Responsividade página micro-hábitos

--- a/FitlyApp/Artigos/CSS/organização_alimentar.css
+++ b/FitlyApp/Artigos/CSS/organização_alimentar.css
@@ -481,7 +481,7 @@ footer a {
 /************************************************/
 /* Responsividade */
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .container {
     flex-direction: column;
   }
