--- a/FitlyApp/Artigos/CSS/micro-habitos.css
+++ b/FitlyApp/Artigos/CSS/micro-habitos.css
@@ -7,29 +7,28 @@ Poppins Font
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format("woff2");
   unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
     U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
+
 /* latin-ext */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format("woff2");
   unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
     U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
     U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -48,6 +47,7 @@ Reset
   padding: 0;
   box-sizing: border-box;
 }
+
 /************************************************
 HTML
 ************************************************/
@@ -75,6 +75,7 @@ p {
 h3 {
   font-size: 1.5rem;
 }
+
 img {
   border-radius: 15px;
 }
@@ -94,15 +95,18 @@ section.introdução {
   margin-top: 2rem;
   text-align: center;
 }
+
 section.introdução h2 {
   color: #009dff;
   margin: 0 0 2.5rem 0;
   font-size: 2rem;
 
 }
+
 section.introdução p {
   margin: 0 0 2.5rem 0;
 }
+
 /************************************************
 Definição
 ************************************************/
@@ -111,20 +115,25 @@ section.explicação h3 {
   margin: 0 0 1rem 0;
   color: #009dff;
 }
+
 section.explicação p {
   margin: 0 0 1rem 0;
 }
+
 section.explicação p span {
   color: #009dff;
 }
+
 section.explicação div.Exemplos {
   display: flex;
   justify-content: space-around;
 }
+
 section.explicação div.Exemplos ul li {
   margin: 0 0 35px 0;
   justify-content: space-around;
 }
+
 section.explicação ul {
   list-style: none;
   padding-left: 0;
@@ -137,7 +146,7 @@ section.explicação li {
 
 section.explicação li:before {
   content: '✓';
-  color: #009dff; 
+  color: #009dff;
   margin-right: 0.5em;
 }
 
@@ -149,11 +158,26 @@ section.motivo h3 {
   margin: 0 0 1rem 0;
   color: #009dff;
 }
+
 section.motivo p {
   margin: 0 0 1rem 0;
 }
+
 section.motivo p span {
   color: #009dff;
+}
+
+section.motivo p.dica-extra {
+  background-color: #e6f5ff;
+  border-left: 4px solid #009dff;
+  padding: 15px;
+  border-radius: 5px;
+
+}
+
+section.motivo p.dica-extra span {
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 
 /************************************************
@@ -165,19 +189,23 @@ section.exercicio {
   margin: 3rem 0 0 0;
   align-items: center;
 }
+
 section.exercicio h3 {
   margin: 0 0 2rem 0;
   color: #009dff;
 }
+
 section.exercicio ul li {
   margin: 0 0 35px 0;
 }
+
 section.exercicio p {
   padding: 0 2vw 0 0;
 }
+
 section.exercicio div img {
   height: 70%;
-  
+
 }
 
 section.exercicio ul {
@@ -192,7 +220,7 @@ section.exercicio li {
 
 section.exercicio li:before {
   content: '✓';
-  color: #009dff; 
+  color: #009dff;
   margin-right: 0.5em;
 }
 
@@ -202,92 +230,233 @@ Referencia
 section.referencia h3 {
   margin: 2rem 0 30px 0;
 }
+
 section.referencia ul li {
   list-style-type: none;
 }
+
 section.referencia ul {
   margin: 2vw;
 }
+
 section.referencia ul li {
- margin: 0 0 16px 5px;
+  margin: 0 0 16px 5px;
 }
+
 section.referencia ul li a {
   color: #009dff;
 
 }
+
+section.referencia ul li a:hover {
+  text-decoration: underline #009dff 0.1vw;
+}
+
 /************************************************
 Rodapé
 ************************************************/
-footer div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 1vw 3vw 0 3vw;
+footer div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1vw 3vw 0 3vw;
 }
+
 footer div div {
-    display: block;
+  display: block;
 }
 
 footer div div h2 {
-    font-size: 1.5vw;
+  font-size: 1.5vw;
 }
+
 footer div div ul li a {
-    font-size: 1vw;
+  font-size: 1vw;
 }
+
 footer div div p {
-    font-size: 1vw;
+  font-size: 1vw;
 }
+
 footer div a {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
 footer div a img {
-    width: 8vw;
+  width: 8vw;
 }
+
 footer div div.logo img {
-   width: 5vw;
+  width: 5vw;
 }
+
 footer div div p {
-    margin: 10px 0;
+  margin: 10px 0;
 }
+
 footer div div.logo ul {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 footer div div.logo ul span {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 }
-footer div div > h2 {
-    color: #009DFF;
+
+footer div div>h2 {
+  color: #009DFF;
 }
+
 footer div div ul li {
-    margin: 10px 0;
+  margin: 10px 0;
 }
+
 footer div div ul li a:hover {
-    text-decoration: underline #009DFF 0.1vw;
+  text-decoration: underline #009DFF 0.1vw;
 }
+
 footer div div p.email {
-    color: #009DFF;
+  color: #009DFF;
 }
-footer div.direitos  {
-    display: flex;
-    justify-content: center;
-    margin: 10px 0 15px 0;
+
+footer div.direitos {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 15px 0;
 }
+
 footer div.direitos p {
-    color: gray;
-    font-size: 0.8rem;
+  color: gray;
+  font-size: 0.8rem;
 }
 
 footer a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 footer ul li {
   list-style: none;
 }
-  @media only screen and (max-width: 600px) {
-  
+
+
+
+
+
+/************************************************/
+/* Responsividade */
+
+@media only screen and (max-width: 768px) {
+  main {
+    margin: 0 5vw;
   }
+
+  section.explicação div.Exemplos {
+    flex-direction: column;
+  }
+
+  section.explicação iframe {
+    width: 100%;
+    height: 200px;
+    margin-top: 1rem;
+  }
+
+  section.exercicio {
+    flex-direction: column;
+  }
+
+  section.exercicio h3 {
+    text-align: center;
+  }
+
+  section.exercicio p {
+    padding: 0;
+    text-align: justify;
+    margin-bottom: 1rem;
+  }
+
+  section.exercicio div img {
+    width: 100%;
+    height: auto;
+    margin-top: 1rem;
+  }
+
+  section.introdução h2 {
+    font-size: 1.35rem;
+    margin: 0 0 3.5vh 0;
+  }
+
+  section.introdução p {
+    font-size: 0.95rem;
+    text-align: justify;
+    margin: 0 0 3vh 0;
+  }
+
+  section.explicação h3 {
+    font-size: 1.35rem;
+    text-align: center;
+  }
+
+  section.explicação p {
+    font-size: 0.95rem;
+    text-align: justify;
+    margin: 0 0 1.5rem 0;
+  }
+
+  section.explicação div.Exemplos h3 {
+    font-size: 1.35rem;
+    text-align: center;
+  }
+
+  section.explicação div.Exemplos ul li {
+    margin: 0 0 15px 0;
+    font-size: 0.95rem;
+  }
+
+  section.motivo h3 {
+    font-size: 1.35rem;
+    text-align: center;
+  }
+
+  section.motivo p {
+    font-size: 0.95rem;
+    text-align: justify;
+    margin: 0 0 1.5rem 0;
+  }
+
+  section.motivo p.dica-extra {
+    margin: 15px 0 0 0;
+    padding: 10px;
+  }
+
+  section.exercicio h3 {
+    font-size: 1.35rem;
+    text-align: center;
+  }
+
+  section.exercicio ul li {
+    margin: 0 0 15px 0;
+    font-size: 0.95rem;
+  }
+
+  section.exercicio ul {
+    margin: 0 0 3vh 0;
+  }
+
+  section.exercicio p {
+    font-size: 0.95rem;
+    text-align: justify;
+  }
+  section.referencia h3 {
+    font-size: 1.35rem;
+    text-align: center;
+    margin: 3rem 0 1.5rem 0;
+  }
+  section.referencia ul li {
+    font-size: 0.95rem;
+    text-align: justify;
+    
+  }
+
+}
