--- a/FitlyApp/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/FitlyApp/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -6,29 +6,28 @@ Poppins Font
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format("woff2");
   unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
     U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
+
 /* latin-ext */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format("woff2");
   unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
     U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
     U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -37,10 +36,11 @@ Poppins Font
 /************************************************
 Coolors
 ************************************************/
-:root{
-  --color-background:  #f7f7f7;
-  --color-text:#0a0908;
+:root {
+  --color-background: #f7f7f7;
+  --color-text: #0a0908;
 }
+
 /************************************************
 Reset
 ************************************************/
@@ -50,6 +50,7 @@ Reset
   padding: 0;
   box-sizing: border-box;
 }
+
 /************************************************
 HTML
 ************************************************/
@@ -60,13 +61,18 @@ html {
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
-p,strong, a {
+
+p,
+strong,
+a {
   color: var(--color-text);
 }
+
 li {
   color: var(--color-background);
 
 }
+
 body {
   background-color: var(--color-background);
 }
@@ -82,6 +88,7 @@ header
 header nav {
   display: flex;
 }
+
 header nav button {
   font-size: 1.5rem;
   align-items: center;
@@ -89,17 +96,21 @@ header nav button {
   border: 0;
   margin: 0 1.5rem;
 }
+
 header nav button:hover {
-  color:#009dff;
+  color: #009dff;
   transition: all 0.3s ease;
   border-radius: 5px;
 }
+
 header nav button span#lua {
   display: block;
 }
+
 header nav button span#sol {
   display: none;
 }
+
 header nav ul li {
   margin: 10px;
   display: inline;
@@ -111,14 +122,16 @@ Introdução
 section.introduction {
   margin: 0 10vw;
 }
- section.introduction h2 {
+
+section.introduction h2 {
   font-size: 2.5rem;
   text-align: center;
   color: #009dff;
   padding: 2vw 0;
   font-weight: bold;
 }
- section.introduction p {
+
+section.introduction p {
   text-align: center;
   font-size: 1rem;
   margin: 0 0 2vw 0;
@@ -130,16 +143,19 @@ Nutrientes
 section.nutrients {
   margin: 2vw 10vw;
 }
+
 section.nutrients h3 {
   font-size: 1.5rem;
   text-align: center;
   color: #009dff;
   font-weight: bold;
 }
-section.nutrients > p {
+
+section.nutrients>p {
   margin: 2vw 0;
 }
-section.nutrients > div {
+
+section.nutrients>div {
   display: flex;
   justify-content: center;
 }
@@ -162,6 +178,7 @@ section.nutrients div ul li {
   min-height: 16vw;
 
 }
+
 section.nutrients div ul li:last-of-type {
   margin: 0 0 30px 0;
 }
@@ -184,25 +201,30 @@ section.nutrients ul li a {
   margin: 0 0 0 20px;
   color: #009dff;
 }
+
 section.nutrients ul li a:hover {
   text-decoration: underline 2px;
 }
+
 section.nutrients ul li div {
   display: flex;
   align-items: flex-end;
   justify-content: center;
   margin: 20px 0 0 0;
 }
+
 section.nutrients ul li div img {
   border: 2px solid #616161;
   border-radius: 10px;
   width: 90%;
   min-height: 23vw;
-  
+
 }
+
 section.nutrients div.video {
   display: block;
 }
+
 section.nutrients div.video p {
   text-align: center;
   margin: 30px 0 20px;
@@ -212,9 +234,10 @@ section.nutrients div.video p {
 Footer
 ************************************************/
 footer {
-  padding:1vw 3vw 0 3vw ;
+  padding: 1vw 3vw 0 3vw;
   background-color: rgba(255, 255, 255, 0.8);
 }
+
 footer div {
   display: flex;
   justify-content: space-between;
@@ -225,105 +248,157 @@ footer div {
 footer div a img {
   width: 8vw;
 }
+
 footer div div {
   display: block;
 }
-footer div div.logo, div.contact, div.mapSite {
+
+footer div div.logo,
+div.contact,
+div.mapSite {
   min-height: 16vw;
   /*Alinha todas as Divs, e por consequências, os títulos*/
 }
+
 footer div div h2 {
   font-size: 1.5rem;
 }
+
 footer div div ul li a {
   font-size: 0.8rem;
 }
+
 footer div div p {
   font-size: 0.8rem;
   color: black;
   margin: 30px 0;
 }
+
 footer div div.logo img {
   width: 5vw;
 }
+
 footer div div p {
   margin: 10px 0;
 }
+
 footer div div.logo ul {
   display: flex;
   align-items: center;
 }
+
 footer div div.logo ul li {
   display: flex;
   align-items: center;
 }
 
-footer div div > h2 {
+footer div div>h2 {
   color: #009dff;
 }
-footer div div ul li > a {
+
+footer div div ul li>a {
   margin: 10px 0;
 }
+
 footer div div ul li a:hover {
   text-decoration: underline #009dff 0.1vw;
 }
+
 footer div div p.email {
   color: #009dff;
 }
+
 footer div.direitos {
   display: flex;
   justify-content: center;
 }
+
 footer div.direitos p {
   color: gray;
   font-size: 0.8rem;
 }
 
-  /*
+/*
   =====================================================
               Celular
   ======================================================
   */
-@media screen and (max-width: 600px) {
-  /*O Menu Hamburguer O Igor aplica depois*/
+@media screen and (max-width: 768px) {
 
-  header .logo img {
+  header.logo img {
     height: 3vw;
   }
-  /*
-  =====================================================
-              Introdução
-  ======================================================
-  */
+
   section.introduction h2 {
     font-size: 1.5rem;
   }
+
   section.introduction p {
     font-size: 0.8rem;
+    text-align: justify;
   }
+
   section.nutrients h3 {
     font-size: 1.3rem;
+    margin-top: 2vh;
   }
-  .nutrients p {
+
+  section.nutrients>p {
     font-size: 0.8rem;
+    text-align: justify;
   }
-  .nutrients ul {
+
+  section.nutrients ul {
     display: block;
-    flex-wrap: nowrap;  
+    flex-wrap: nowrap;
   }
-  .nutrients ul li {
-      flex-basis: auto; /* Remove o tamanho fixo, baseando-se no conteúdo */
-    flex-grow: 1; /* Permite que o item cresça para ocupar o espaço disponível */
+
+  section.nutrients ul li {
+    flex-basis: auto;
+    flex-grow: 1;
+
   }
-  .nutrients ul li {
+
+  section.nutrients ul li {
     font-size: 0.8rem;
   }
-  .nutrients ul li div img {
-    height: 100%;  
+
+  section.nutrients ul li div img {
+    height: 100%;
   }
-  .nutrients div.video p iframe {
+
+  section.nutrients div.video p iframe {
     width: 80vw;
     margin: 0;
   }
-    /*Falta a formatação do footer*/
+
+  section.nutrients div ul {
+    display: block;
+  }
+
+  section.nutrients div ul {
+    display: block;
+  }
+
+  section.nutrients div ul li {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  section.nutrients div ul li p {
+    font-size: 0.95rem;
+    text-align: justify;
+  }
+  section.nutrients div ul li a {
+    text-align: center;
+    font-size: 0.95rem;
+    margin: 0 0 0 10px;
+  }
+  section.nutrients div.video h3 {
+    font-size: 1.2rem;
+  }
+  section.nutrients div.video iframe {
+    width: 100%;
+    height: 250px;
+  }
+
 }
