--- a/FitlyApp/Artigos/css/alimentaçãoEquilibrada.css
+++ b/FitlyApp/Artigos/css/alimentaçãoEquilibrada.css
@@ -38,31 +38,15 @@ Coolors
 ************************************************/
 :root {
   --color-background: #f7f7f7;
-  --color-text: #0a0908;
+  --color-text: #000000;
 }
 
-/************************************************
-Reset
-************************************************/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 /************************************************
 HTML
 ************************************************/
 
-html {
-  font-family: "Poppins";
-  scroll-behavior: smooth;
-  font-size: calc(15px + 0.390625vw);
-  list-style-type: none;
-}
-
-p,
+main p,
 strong,
 a {
   color: var(--color-text);
@@ -75,10 +59,6 @@ li {
 
 body {
   background-color: var(--color-background);
-}
-
-ul li {
-  list-style: none;
 }
 
 /************************************************
